# chatgpt-customer-support-fastapi

./: .gitignore  Dockerfile  README.md  postman_collection.json  pyproject.toml
app/: main.py
app/db/: seed.py  session.py
app/models/: ticket.py
app/routers/: tickets.py
app/schemas/: common.py  tickets.py
app/services/: reply_engine.py
app/utils/: ids.py
chatgpt_customer_support_fastapi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_tickets.py
