[project]
name = "chatgpt-customer-support-fastapi"
version = "0.1.0"
description = "Mock Zendesk ticket flow on FastAPI"
authors = [{name = "Your Name"}]
requires-python = ">=3.10"

dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic[email]==2.9.2",
  "SQLAlchemy==2.0.36",
  "alembic==1.13.2",
  "python-dotenv==1.0.1",
  "httpx==0.27.2"
]

[tool.pytest.ini_options]
pythonpath = ["."]
